--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header id="header">
         <!-- resume header with your name and title -->
-        <h1>Your Name Goes Here !</h1>
+        <h1>Dominic Doma</h1>
         <hr>
         Your Role!
         <hr>
